# AdventOfCode

./: .gitignore  CMakeLists.txt
2015/: CMakeLists.txt
2015/1/: Makefile  main.c
2015/10/: CMakeLists.txt  Makefile  main.c
2015/11/: Makefile  main.c
2015/12/: main.c
2015/2/: Makefile  main.c
2015/3/: Makefile  main.c
2015/4/: Makefile  main.c
2015/5/: Makefile  main.c
2015/6/: Makefile  main.c  sample
2015/7/: Makefile  main.c  sample
2015/8/: Makefile  main.c
2015/9/: Makefile  main.c
2022/1/: Makefile  main.c
2022/2/: Makefile  main.c
2022/3/: Makefile  main.c
cmake/: compiler.cmake
lib/: .clang-format  CMakeLists.txt  Makefile  binary_tree.c  binary_tree.h  defs.h  map.c  map.h  md5.c  md5.h  slice.c  slice.h  support.c  support.h
template/: Makefile  main.c
